Skip to content

input/decoder.c OutputChangePause: unreachable

If the packetizer sets the codec after Open() the:

  • fmt is now invalid (cleant)
  • any pause (maybe other controls) triggers unreachable areas
[#0](https://code.videolan.org/videolan/vlc/-/issues/0)  0x00007ffff7aa753f in raise () at /lib64/libc.so.6
[#1](https://code.videolan.org/videolan/vlc/-/issues/1)  0x00007ffff7a91895 in abort () at /lib64/libc.so.6
[#2](https://code.videolan.org/videolan/vlc/-/issues/2)  0x00007ffff7a91769 in _nl_load_domain.cold.0 () at /lib64/libc.so.6
[#3](https://code.videolan.org/videolan/vlc/-/issues/3)  0x00007ffff7a9f9f6 in .annobin_assert.c_end () at /lib64/libc.so.6
[#4](https://code.videolan.org/videolan/vlc/-/issues/4)  0x00007ffff7ed85e1 in OutputChangePause (date=82854969223, paused=true, p_dec=0x7fff90c1d7b0) at input/decoder.c:1589
[#5](https://code.videolan.org/videolan/vlc/-/issues/5)  0x00007ffff7ed85e1 in DecoderThread (p_data=<optimized out>) at input/decoder.c:1671
[#6](https://code.videolan.org/videolan/vlc/-/issues/6)  0x00007ffff7c3f58e in start_thread () at /lib64/libpthread.so.0
[#7](https://code.videolan.org/videolan/vlc/-/issues/7)  0x00007ffff7b6c6a3 in clone () at /lib64/libc.so.6

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information